fix: why choose us section z-index

--- a/src/components/Pages/Landing/Sections/WhyChooseUs/styles/whyChooseUs.module.scss
+++ b/src/components/Pages/Landing/Sections/WhyChooseUs/styles/whyChooseUs.module.scss
@@ -101,6 +101,7 @@
     width: 100%;
     height: auto;
     display: flex;
+    z-index: 5;
 
     .descDiv {
       width: 60%;
@@ -270,7 +271,7 @@
 
 .sparkle2{
   position: absolute;
-  height: 100px;
-  margin-top: 33%;
+  height: 60px;
+  margin-top: 20%;
   left: 23%;
 }
